--- a/3.html
+++ b/3.html
@@ -10,7 +10,7 @@
 
 <ol>
   <li><a href="1.HTML"title="fundamental">html</a></li>
-  <li><a href="2.css">css</a></li>
+  <li><a href="2.html">css</a></li>
   <li><a href="3.html">java</a></li>
 </ol>
 
