--- a/index.html
+++ b/index.html
@@ -1,28 +1,72 @@
-<!doctyp html>
-<html>
+<!doctype html>
+<html lang="en">
+
 <head>
-<title> web-html</title>
-<meta charset="utf-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>나만의 중고마켓</title>
+    <link rel="stylesheet" href="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/easygpt/default.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <style>
+      .card-img-top {
+  transition: transform 1s ease-in-out;
+}
+
+.card-img-top:hover {
+  transform: scale(1.1);
+}
+  /* add margin below hero sections */
+        .hero {
+            margin-bottom: 20px;
+
+ }
+    </style>
 </head>
 
 <body>
-  <h1>web</h1>
+    <div class="hero bg-dark text-center py-5">
+        <h1 class="text-white">나만의 르탄마켓</h1>
+        <h2 class="text-white">집에 있는 물건을 팝니다!</h2>
+    </div>
 
-<ol>
-  <li><a href="1.HTML">html</a></li>
-  <li><a href="2.html">css</a></li>
-  <li><a href="3.html">java</a></li>
-</ol>
-
-<H1>HTML이란 무엇인가?</H1>
-<p><a href="https://www.w3.org/"target="_blank"title="html5 specification">The HyperText Markup Language, or HTML</a> is the <STRONG>standard <U>markup</U>
-  language</STRONG> for
- documents designed to be displayed in a web browser.
- <BR><BR><H2>W3</h2> announced today</p>
-    <P STYLE= "MARGIN-TOP: 40PX;">the joint W3C/SMPTE Workshop on
-       Professional Media Production
- <BR>on the Web, which is being organized as a virtual event<BR>
- during SMPTE’s annual ATC event, 9-18 November 2021.</p>
-<img src="coding.jpg" width="100%">
-</body>
-</html>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://source.unsplash.com/1600x900/?chair,wooden" class="card-img-top" alt="Wooden chair">
+                    <div class="card-body">
+                        <h5 class="card-title">Wooden Chair</h5>
+                        <p class="card-text">Selling a wooden chair in great condition. Bought it for my home office but decided to go for a different style. Pick-up only.</p>
+                        <a href="https://www.spartacodingclub.kr/" class="btn btn-primary">Go to Sparta Coding Club</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://source.unsplash.com/1600x900/?bag,leather" class="card-img-top" alt="Leather bag">
+                    <div class="card-body">
+                        <h5 class="card-title">Leather Bag</h5>
+                        <p class="card-text">Selling a genuine leather bag. Used it for work for a few months but found another one I like more. Comes with a removable strap and multiple compartments.</p>
+                        <a href="https://www.spartacodingclub.kr/" class="btn btn-primary">Go to Sparta Coding Club</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="https://source.unsplash.com/1600x900/?jacket,denim" class="card-img-top" alt="Denim jacket">
+                    <div class="card-body">
+                        <h5 class="card-title">Denim
+                          <p class="card-text">Selling a genuine leather bag. Used it for work for a few months but found another one I like more. Comes with a removable strap and multiple compartments.</p>
+                          <a href="https://www.spartacodingclub.kr/" class="btn btn-primary">Go to Sparta Coding Club</a>
+                        </div><div class="col-md-4">          
+                            <div class="card">
+                                <img src="장미 꽃.jpg"card-img-top" alt="장미 꽃">
+                                <div class="card-body">
+                                    <h5 class="card-title">장미 꽃
+                                      <p class="card-text">Selling 결혼식 부케  너무 소중한 보물</p>
+                                      <a href="https://www.spartacodingclub.kr/" class="btn btn-primary">Go to Sparta Coding Club</a>
+                                  </div>       
+  </div>
+    
+  </body>                                
